c4prj2_input/grade.txt
Grading at Mon 11 Mar 2024 02:17:55 AM UTC
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
Compiling future.c -> future.o
future.c: In function ‘add_future_card’:
future.c:11:26: error: incompatible type for argument 1 of ‘add_card_to’
   11 |     add_card_to(fc->decks[index], *ptr);
      |                 ~~~~~~~~~^~~~~~~
      |                          |
      |                          deck_t {aka struct deck_tag}
In file included from future.h:3,
                 from future.c:1:
deck.h:17:27: note: expected ‘deck_t *’ {aka ‘struct deck_tag *’} but argument is of type ‘deck_t’ {aka ‘struct deck_tag’}
   17 | void add_card_to(deck_t * deck, card_t c);
      |                  ~~~~~~~~~^~~~
future.c: In function ‘future_cards_from_deck’:
future.c:15:9: error: implicit declaration of function ‘fprintf’ [-Werror=implicit-function-declaration]
   15 |         fprintf(stderr, "Error: Not enough cards in the deck to fill future cards.\n");
      |         ^~~~~~~
future.c:15:9: error: incompatible implicit declaration of built-in function ‘fprintf’ [-Werror]
future.c:2:1: note: include ‘<stdio.h>’ or provide a declaration of ‘fprintf’
    1 | #include "future.h"
  +++ |+#include <stdio.h>
    2 | #include "deck.h"
future.c:15:17: error: ‘stderr’ undeclared (first use in this function)
   15 |         fprintf(stderr, "Error: Not enough cards in the deck to fill future cards.\n");
      |                 ^~~~~~
future.c:15:17: note: ‘stderr’ is defined in header ‘<stdio.h>’; did you forget to ‘#include <stdio.h>’?
future.c:15:17: note: each undeclared identifier is reported only once for each function it appears in
future.c:21:13: error: incompatible implicit declaration of built-in function ‘fprintf’ [-Werror]
   21 |             fprintf(stderr, "Error: Future card deck %zu is empty.\n", i);
      |             ^~~~~~~
future.c:21:13: note: include ‘<stdio.h>’ or provide a declaration of ‘fprintf’
cc1: all warnings being treated as errors
Compilation of future.c failed

Overall Grade: F
